# H264Decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Cli/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  pch.h
H264Decoder/: CMakeLists.txt  pch.h
H264Decoder/Data/: Byte.h  CommonValues.h  DecimalValue.h  DecodingContext.h  NALUnit.cpp  NALUnit.h  NaluTypes.h  RealValue.h  SliceType.h
H264Decoder/Data/NALU/: AUDRbsp.h  AdaptiveRefBasePicMarkingMode.h  AnchorRef.h  CPB.h  ChromaFormat.h  ChromaWeightData.h  CodedBlock.h  Coeff.h  CurrentPictureContext.h  DPSContext.h  DPSRbsp.cpp  DPSRbsp.h  DecRefBasePicMarking.h  DecRefPicMarking.cpp  DecRefPicMarking.h  DepthRange.cpp  DepthRange.h  EndOfSequenceRbsp.h  EndOfStreamRbsp.h  FillerDataRbsp.h  FilterDataRbsp.h  FrameCropping.h  GridPosView.h  HrdParameters.h  InterpretationOfPicStruct.h  Intra4x4Pred.h  LumaWeightData.h  MacroBlockLayer.h  MacroBlockLayerIn3DAVCExtension.h  MacroBlockLayerInScalableExtension.h  MbPred.h  MbPredIn3DAVCExtension.h  MbPredInScalableExtension.h  MvcVuiParametersExtension.h  MvcdOp.h  MvcdVuiParametersExtension.h  NALUnitHeader3DavcExtension.h  NALUnitHeaderMvcExtension.h  NALUnitHeaderSvcExtension.h  PPSRbsp.cpp  (+66 more)
H264Decoder/Data/NALU/SEI/: AlternativeDepthInfo.h  AlternativeTransferCharacteristics.h  BufferingPeriod.h  (+86 more)
H264Decoder/Data/VCL/: SliceGroupMapType.cpp  SliceGroupMapType.h
H264Decoder/Decoding/: CabacDecoder.cpp  CabacDecoder.h  CabacTable.h
H264Decoder/Exception/: ParseError.h
H264Decoder/IO/: AVCReader.cpp  AVCReader.h  AnnexBReader.cpp  AnnexBReader.h  BitstreamReader.cpp  BitstreamReader.h  ByteHelper.h  NALUMapping.h  NALUnitReader.cpp  NALUnitReader.h
H264Decoder/Utils/: AutoInjector.h
Testing/: CMakeLists.txt  TestBitstreamReader.cpp  main.cpp  pch.h
